@@ -66,7 +66,9 @@ Bug fixes since 1.2
 
 Enhancements since 1.2
 ----------------------
-
+- DateTimeFormatter/DateTimeParserBucket
+  If a parsed datetime is illegal due to field range or time zone offset
+  transition, thrown exception includes text of datetime being parsed.
 
 Feedback
 --------
